feat(nginx): enhance mediawiki.conf with performance optimizations, security headers, and Sentry integration for improved error handling and resource management

--- a/wiki/mediawiki.conf
+++ b/wiki/mediawiki.conf
@@ -4,12 +4,41 @@ server {
     root /var/www/wiki;
     index index.php;
 
+    # Performance optimization: Open file cache
+    # Fixes try_files performance overhead
+    open_file_cache max=1000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
+
+    # Client body size limits (Sentry envelopes can be large)
+    client_max_body_size 10m;
+    client_body_buffer_size 128k;
+
+    # Main location block
     location / {
+        # Redirect root to MediaWiki (restore original behavior)
         rewrite ^/$ /mediawiki/index.php last;
+
+        # Include ALL headers for regular requests (including OPTIONS preflight)
+        add_header 'X-Frame-Options' 'SAMEORIGIN' always;
+        add_header 'X-Content-Type-Options' 'nosniff' always;
+        add_header 'X-XSS-Protection' '1; mode=block' always;
+        add_header 'Referrer-Policy' 'strict-origin-when-cross-origin' always;
+        add_header 'Permissions-Policy' 'geolocation=(), microphone=(), camera=()' always;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'sentry-trace, baggage, Content-Type, Authorization, X-Requested-With, Accept, Origin' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' '86400' always;
+
+        # Continue with normal request processing
         try_files $uri $uri/ /mediawiki/index.php?$args;
     }
 
-    location ~ \.php$ {
+    # Handle MediaWiki PHP files in /mediawiki/ directory
+    # This must come before the general PHP location block
+    location ~ ^/mediawiki/.*\.php$ {
         try_files $uri =404;
         include fastcgi_params;
         fastcgi_pass mediawiki:9000;
@@ -19,6 +48,36 @@ server {
         fastcgi_buffer_size 128k;
         fastcgi_buffers 4 256k;
         fastcgi_busy_buffers_size 256k;
+
+        # Handle large Sentry payloads (envelopes can be up to several MB)
+        client_max_body_size 10m;
+        client_body_buffer_size 128k;
+
+        # Pass through Sentry-specific headers
+        fastcgi_param HTTP_SENTRY_TRACE $http_sentry_trace;
+        fastcgi_param HTTP_BAGGAGE $http_baggage;
+    }
+
+    # Handle other PHP files (excludes /mediawiki/ which is handled above)
+    location ~ ^(?!\/mediawiki\/).*\.php$ {
+        try_files $uri =404;
+        include fastcgi_params;
+        fastcgi_pass mediawiki:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_index index.php;
+        fastcgi_read_timeout 300;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
+
+        # Handle large Sentry payloads (envelopes can be up to several MB)
+        # Increase limits for Sentry error reporting and security violations
+        client_max_body_size 10m;
+        client_body_buffer_size 128k;
+
+        # Pass through Sentry-specific headers
+        fastcgi_param HTTP_SENTRY_TRACE $http_sentry_trace;
+        fastcgi_param HTTP_BAGGAGE $http_baggage;
     }
 
     location = /index.php {
@@ -37,6 +96,24 @@ server {
         try_files $uri $uri/ /mediawiki/rest.php?$args;
     }
 
+    # Sentry tunnel endpoint for ad-blocker bypass
+    # Allows JavaScript SDK to send events through server-side proxy
+    # https://docs.sentry.io/platforms/javascript/troubleshooting/#using-the-tunnel-option
+    location ~ ^/w/api\.php$ {
+        # Include ALL headers (add_header replaces parent headers)
+        add_header 'X-Frame-Options' 'SAMEORIGIN' always;
+        add_header 'X-Content-Type-Options' 'nosniff' always;
+        add_header 'X-XSS-Protection' '1; mode=block' always;
+        add_header 'Referrer-Policy' 'strict-origin-when-cross-origin' always;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, sentry-trace, baggage' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' '86400' always;
+
+        try_files $uri $uri/ /mediawiki/api.php?$args;
+    }
+
     location ~ ^/Extensions/(.*)$ {
         rewrite ^/Extensions/(.*)$ /mediawiki/extensions/$1 last;
     }
@@ -53,27 +130,68 @@ server {
         deny all;
     }
 
-    location ~ /\.env {
+    location ~ ^/\.env$ {
         deny all;
     }
 
-    location ~ /\.git {
+    location ~ ^/\.git$ {
         deny all;
     }
 
-    location ~ /\.ht {
+    location ~ ^/\.ht$ {
         deny all;
     }
 
     location ~ ^/mediawiki/(maintenance|mw-config|vendor|includes|cache|tests)/ {
-    deny all;
+        deny all;
     }
 
     location ~ ^/mediawiki/skins/.*/dev-scripts/ {
         deny all;
     }
 
-    access_log /var/log/nginx/mediawiki_access.log;
+    # Allow access to Sentry CDN resources (proxy/cache if needed)
+    # Most CDNs work directly, but this ensures reliability
+    location ~* \.sentry\.io$ {
+        # Include ALL headers (add_header replaces parent headers)
+        add_header 'X-Frame-Options' 'SAMEORIGIN' always;
+        add_header 'X-Content-Type-Options' 'nosniff' always;
+        add_header 'X-XSS-Protection' '1; mode=block' always;
+        add_header 'Referrer-Policy' 'strict-origin-when-cross-origin' always;
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'sentry-trace, baggage, Content-Type, Authorization, X-Requested-With, Accept, Origin' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+        # Cache Sentry resources for performance
+        add_header Cache-Control "public, immutable" always;
+
+        # Allow direct access to Sentry CDN
+        proxy_pass https://$host$request_uri;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Cache Sentry resources for performance
+        expires 1h;
+    }
+
+    # Gzip compression for better performance with Sentry payloads
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
+
+    # Custom logging for security events
+    # Track security-related requests separately
+    set $security_request 0;
+    if ($request_uri ~* "(sentry|security|csp)") {
+        set $security_request 1;
+    }
+    access_log /var/log/nginx/mediawiki_access.log combined;
+    access_log /var/log/nginx/security_access.log combined if=$security_request;
     error_log /var/log/nginx/mediawiki_error.log;
     server_tokens off;
 }
