fix(config): update PHP error log path to align with MediaWiki directory structure

--- a/wiki/php.ini
+++ b/wiki/php.ini
@@ -1,7 +1,7 @@
 ; General Configurations
 error_reporting = E_ALL
 log_errors = On
-error_log = /var/log/php/error.log
+error_log = /var/log/mediawiki/error.log
 display_errors = Off
 display_startup_errors = Off
 zend.exception_ignore_args=Off
