refactor(mediawiki): update CORS headers and rewrite rules for improved clarity and functionality

--- a/wiki/mediawiki.conf
+++ b/wiki/mediawiki.conf
@@ -29,7 +29,7 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'sentry-trace, baggage, Content-Type, Authorization, X-Requested-With, Accept, Origin' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        # Note: Access-Control-Allow-Credentials cannot be used with wildcard origin
         add_header 'Access-Control-Max-Age' '86400' always;
 
         # Continue with normal request processing
@@ -84,9 +84,6 @@ server {
         rewrite ^/index.php(.*)$ /mediawiki/index.php$1 last;
     }
 
-    location = /api.php {
-        rewrite ^/api.php(.*)$ /mediawiki/api.php$1 last;
-    }
 
     location = /load.php {
         rewrite ^/load.php(.*)$ /mediawiki/load.php$1 last;
@@ -99,7 +96,8 @@ server {
     # Sentry tunnel endpoint for ad-blocker bypass
     # Allows JavaScript SDK to send events through server-side proxy
     # https://docs.sentry.io/platforms/javascript/troubleshooting/#using-the-tunnel-option
-    location ~ ^/w/api\.php$ {
+    # Note: Uses /api.php (not /w/api.php) because $wgScriptPath = "" (pretty URLs)
+    location = /api.php {
         # Include ALL headers (add_header replaces parent headers)
         add_header 'X-Frame-Options' 'SAMEORIGIN' always;
         add_header 'X-Content-Type-Options' 'nosniff' always;
@@ -108,10 +106,10 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'Content-Type, sentry-trace, baggage' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        # Note: Access-Control-Allow-Credentials cannot be used with wildcard origin
         add_header 'Access-Control-Max-Age' '86400' always;
 
-        try_files $uri $uri/ /mediawiki/api.php?$args;
+        rewrite ^/api.php(.*)$ /mediawiki/api.php$1 last;
     }
 
     location ~ ^/Extensions/(.*)$ {
@@ -130,15 +128,15 @@ server {
         deny all;
     }
 
-    location ~ ^/\.env$ {
+    location ~ /\.env {
         deny all;
     }
 
-    location ~ ^/\.git$ {
+    location ~ /\.git {
         deny all;
     }
 
-    location ~ ^/\.ht$ {
+    location ~ /\.ht {
         deny all;
     }
 
@@ -161,7 +159,7 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, HEAD, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'sentry-trace, baggage, Content-Type, Authorization, X-Requested-With, Accept, Origin' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        # Note: Access-Control-Allow-Credentials cannot be used with wildcard origin
 
         # Cache Sentry resources for performance
         add_header Cache-Control "public, immutable" always;
