chore(compose): add warnings to compose files for name to not change

--- a/deployment/local-compose.yaml.example
+++ b/deployment/local-compose.yaml.example
@@ -1,4 +1,4 @@
-name: local-wiki
+name: local-wiki # DO NOT CHANGE THIS, THIS WILL BREAK JUSTSCRIPTS AND OTHER AUTOMATIONS
 
 services:
   mediawiki:
