chore(docker/just/readme): update compose files inline with standards

--- a/compose.production.yaml.example
+++ b/compose.production.yaml.example
@@ -1,4 +1,4 @@
-name: prod-wiki # DO NOT CHANGE THIS, THIS WILL BREAK JUSTSCRIPTS AND OTHER AUTOMATIONS
+name: production-wiki # DO NOT CHANGE THIS, THIS WILL BREAK JUSTSCRIPTS AND OTHER AUTOMATIONS
 
 services:
   mediawiki:
