chore(vscode): fix vscode file associations (actually)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.associations": {
-        "*.yaml": "yaml",
+        "*.yaml.*": "yaml",
         ".env*": "env",
         "Justfile*": "just"
     }
