chore(env): fix example env example var for DB_SERVER

--- a/.env.local.example
+++ b/.env.local.example
@@ -23,7 +23,7 @@ SECRET_KEY=""
 # DB Configurations
 
 # The IP address or hostname of your database server
-DB_SERVER="mariadb"
+DB_SERVER="local-wiki-mariadb"
 # The name of the table in the database used by MediaWiki
 DB_NAME="local-maria-db" # This needs to match MARIADB_NAME
 # The username used by MediaWiki to connect to the database
