--- a/.github/workflows/lint-php.yml
+++ b/.github/workflows/lint-php.yml
@@ -24,7 +24,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
-          tools: phpcs
+          tools: phpcs, phpcbf
 
       - name: Lint with PHPCS
         id: phpcs
