feat(docker): add opensearch container

--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,5 @@ SITENAME=""
 WG_SERVER=""
 # Discord Webhook URL
 DISCORD_WEBHOOK_URL=""
+# Opensearch Initial Admin Password
+OPENSEARCH_INITIAL_ADMIN_PASSWORD=""
