--- a/compose.local.yaml.example
+++ b/compose.local.yaml.example
@@ -118,6 +118,36 @@ services:
     expose:
       - '9000'
 
+  opensearch:
+    image: opensearchproject/opensearch:1.3.20
+    container_name: staging-wiki-opensearch
+    environment:
+      - discovery.type=single-node
+      - cluster.name=mediwiki-cluster
+      - node.name=mediwiki-node
+      - bootstrap.memory_lock=true
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=${OPENSEARCH_INITIAL_ADMIN_PASSWORD}
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    volumes:
+      - opensearch-data:/usr/share/opensearch/data
+    networks:
+      - wiki-network
+    healthcheck:
+      test: ["CMD-SHELL", "curl -k -u admin:${OPENSEARCH_INITIAL_ADMIN_PASSWORD} https://localhost:9200/_cluster/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    expose:
+      - '9200'
+
 networks:
   wiki-network:
     driver: bridge
@@ -126,4 +156,6 @@ volumes:
   wiki-webroot:
     driver: local
   valkey-data:
+    driver: local
+  opensearch-data:
     driver: local
