--- a/compose.production.yaml.example
+++ b/compose.production.yaml.example
@@ -74,7 +74,7 @@ services:
 
   opensearch:
     image: opensearchproject/opensearch:1.3.20
-    container_name: staging-wiki-opensearch
+    container_name: wiki-opensearch
     environment:
       - discovery.type=single-node
       - cluster.name=mediwiki-cluster
@@ -94,7 +94,7 @@ services:
     networks:
       - wiki-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -k -u admin:${OPENSEARCH_INITIAL_ADMIN_PASSWORD} https://localhost:9200/_cluster/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
