--- a/compose.staging.yaml.example
+++ b/compose.staging.yaml.example
@@ -94,7 +94,7 @@ services:
     networks:
       - wiki-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -k -u admin:${OPENSEARCH_INITIAL_ADMIN_PASSWORD} https://localhost:9200/_cluster/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
