--- a/compose.local.yaml.example
+++ b/compose.local.yaml.example
@@ -136,7 +136,7 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - opensearch-data:/usr/share/opensearch/data
+      - ./opensearch:/usr/share/opensearch/data
     networks:
       - wiki-network
     healthcheck:
@@ -156,6 +156,4 @@ volumes:
   wiki-webroot:
     driver: local
   valkey-data:
-    driver: local
-  opensearch-data:
     driver: local
