--- a/compose.production.yaml.example
+++ b/compose.production.yaml.example
@@ -75,6 +75,7 @@ services:
   opensearch:
     image: opensearchproject/opensearch:1.3.20
     container_name: wiki-opensearch
+    restart: unless-stopped
     environment:
       - discovery.type=single-node
       - cluster.name=mediwiki-cluster
