--- a/compose.staging.yaml.example
+++ b/compose.staging.yaml.example
@@ -82,6 +82,7 @@ services:
       - bootstrap.memory_lock=true
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
       - plugins.security.disabled=true
+    restart: unless-stopped
     ulimits:
       memlock:
         soft: -1
